views: anchor SessionCrashedBubbleView

This utility function makes the bubble stay anchored when fullscreening the
window. Most other chrome bubbles inherit from one of the extension or
location decoration bubble classes and therefore already have this behavior,
but SessionCrashedBubbleView is unusual.

Bug: 825904
Change-Id: Ibc482f9f3f29de9e049b26770463f7e1d2a19c96
Reviewed-on: https://chromium-review.googlesource.com/981234
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546151}
Former-commit-id: 83c3f7662808f7fb7e78f2ac7921280e54e82f59